--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fast-json-stable-stringify": "^2.1.0",
     "fastest-levenshtein": "^1.0.16",
     "find-up": "^4.1.0",
+    "flatpickr": "^4.6.13",
     "function-bind": "^1.1.1",
     "glob-to-regexp": "^0.4.1",
     "graceful-fs": "^4.2.10",
